# R36S-CoverManagerX

./: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: filesystem.rs
src-tauri/src/modules/: enums.rs  mod.rs
src-tauri/src/modules/filesystem/: directory.rs  logical_device.rs  mod.rs
src-tauri/src/modules/r36s/: game_list.rs  mod.rs
src-tauri/src/modules/windows/: dialogs.rs
src-tauri/src/utils/: mod.rs  pcwstr.rs
web/: app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
web/assets/scss/: style.scss
web/components/: ErrorCard.vue  Icon.vue  ImagePlaceholder.vue  Loading.vue  MessageWithIcon.vue
web/components/emulator/: EmulatorGridItem.vue
web/composables/pages/: useRomCoversPage.ts
web/composables/tauri/: useTauriCommands.ts
web/data/models/: IEmulatorData.ts  IGameListEntry.ts  IRomData.ts
web/data/types/: OsString.ts
web/lang/: common.ts  es-ES.ts
web/layouts/: default.vue
web/pages/: index.vue
web/pages/consoles/: [console].vue
web/pages/consoles/[console]/: index.vue
web/stores/: appStore.ts
web/stores/pages/: romCoversStore.ts
web/utils/: misc.ts  osString.ts
